src/presenters/Post/Image/image.css
.image {
  display: flex;
  overflow-x: auto;
  margin: 4px 0;
}

.image img {
  margin-right: 4px;
  width: 144px;
  height: 144px;
  border-radius: var(--image-border-radius-small);
  object-fit: cover;
}

.imageSize {
  position: relative;
  pointer-events: none;
}

.imageSize p {
  position: absolute;
  bottom: 0;
  right: 0;
  padding: 4px;
  margin: 0;
  white-space: nowrap;
  overflow: hidden;
  color: var(--color-caption);
  background-color: var(--color-background);
  opacity: 0.8;
  font-size: 0.8em;
}

.imageCount {
  color: var(--color-caption);
  font-size: 0.8em;
}

